// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NotificationDrawerListItemHeader list item header with custom icon applied  1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-notification-drawer__list-item-header"
  >
    <span
      class="pf-v6-c-notification-drawer__list-item-header-icon"
    >
      <svg
        aria-hidden="true"
        class="pf-v6-svg"
        fill="currentColor"
        height="1em"
        role="img"
        viewBox="0 0 32 32"
        width="1em"
      >
        <path
          d="M28.75 22v3.5c0 .689-.561 1.25-1.25 1.25h-7.521c.005.084.021.166.021.25 0 2.206-1.794 4-4 4s-4-1.794-4-4c0-.084.016-.166.021-.25H4.5c-.689 0-1.25-.561-1.25-1.25V22a.75.75 0 0 1 .75-.75c1.24 0 2.25-1.009 2.25-2.25v-4c0-4.826 3.528-8.833 8.138-9.605A2.482 2.482 0 0 1 13.5 3.5C13.5 2.122 14.621 1 16 1s2.5 1.122 2.5 2.5c0 .761-.349 1.436-.888 1.895 4.61.772 8.138 4.779 8.138 9.605v4c0 1.241 1.01 2.25 2.25 2.25a.75.75 0 0 1 .75.75Z"
        />
      </svg>
    </span>
    <h2
      class="pf-v6-c-notification-drawer__list-item-header-title"
    >
      Pod quit unexpectedly
    </h2>
  </div>
</DocumentFragment>
`;

exports[`NotificationDrawerListItemHeader list item header with srTitle applied  1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-notification-drawer__list-item-header"
  >
    <span
      class="pf-v6-c-notification-drawer__list-item-header-icon"
    >
      <svg
        aria-hidden="true"
        class="pf-v6-svg"
        fill="currentColor"
        height="1em"
        role="img"
        viewBox="0 0 32 32"
        width="1em"
      >
        <path
          d="M28.75 22v3.5c0 .689-.561 1.25-1.25 1.25h-7.521c.005.084.021.166.021.25 0 2.206-1.794 4-4 4s-4-1.794-4-4c0-.084.016-.166.021-.25H4.5c-.689 0-1.25-.561-1.25-1.25V22a.75.75 0 0 1 .75-.75c1.24 0 2.25-1.009 2.25-2.25v-4c0-4.826 3.528-8.833 8.138-9.605A2.482 2.482 0 0 1 13.5 3.5C13.5 2.122 14.621 1 16 1s2.5 1.122 2.5 2.5c0 .761-.349 1.436-.888 1.895 4.61.772 8.138 4.779 8.138 9.605v4c0 1.241 1.01 2.25 2.25 2.25a.75.75 0 0 1 .75.75Z"
        />
      </svg>
    </span>
    <h2
      class="pf-v6-c-notification-drawer__list-item-header-title"
    >
      <span
        class="pf-v6-screen-reader"
      >
        screen reader title
      </span>
      Pod quit unexpectedly
    </h2>
  </div>
</DocumentFragment>
`;

exports[`NotificationDrawerListItemHeader list item header with variant applied  1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-notification-drawer__list-item-header"
  >
    <span
      class="pf-v6-c-notification-drawer__list-item-header-icon"
    >
      <svg
        aria-hidden="true"
        class="pf-v6-svg"
        fill="currentColor"
        height="1em"
        role="img"
        viewBox="0 0 32 32"
        width="1em"
      >
        <path
          d="M16 1C7.729 1 1 7.729 1 16s6.729 15 15 15 15-6.729 15-15S24.271 1 16 1Zm7.795 11.795-8.646 8.646c-.317.317-.733.475-1.149.475s-.832-.158-1.149-.475l-4.646-4.646a1.126 1.126 0 0 1 1.591-1.591l4.205 4.205 8.205-8.205a1.126 1.126 0 0 1 1.591 1.591Z"
        />
      </svg>
    </span>
    <h2
      class="pf-v6-c-notification-drawer__list-item-header-title"
    >
      Pod quit unexpectedly
    </h2>
  </div>
</DocumentFragment>
`;

exports[`NotificationDrawerListItemHeader renders with PatternFly Core styles 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-notification-drawer__list-item-header"
  >
    <span
      class="pf-v6-c-notification-drawer__list-item-header-icon"
    >
      <svg
        aria-hidden="true"
        class="pf-v6-svg"
        fill="currentColor"
        height="1em"
        role="img"
        viewBox="0 0 32 32"
        width="1em"
      >
        <path
          d="M28.75 22v3.5c0 .689-.561 1.25-1.25 1.25h-7.521c.005.084.021.166.021.25 0 2.206-1.794 4-4 4s-4-1.794-4-4c0-.084.016-.166.021-.25H4.5c-.689 0-1.25-.561-1.25-1.25V22a.75.75 0 0 1 .75-.75c1.24 0 2.25-1.009 2.25-2.25v-4c0-4.826 3.528-8.833 8.138-9.605A2.482 2.482 0 0 1 13.5 3.5C13.5 2.122 14.621 1 16 1s2.5 1.122 2.5 2.5c0 .761-.349 1.436-.888 1.895 4.61.772 8.138 4.779 8.138 9.605v4c0 1.241 1.01 2.25 2.25 2.25a.75.75 0 0 1 .75.75Z"
        />
      </svg>
    </span>
    <h2
      class="pf-v6-c-notification-drawer__list-item-header-title"
    >
      Pod quit unexpectedly
    </h2>
  </div>
</DocumentFragment>
`;

exports[`NotificationDrawerListItemHeader renders with correct heading level 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-notification-drawer__list-item-header"
  >
    <span
      class="pf-v6-c-notification-drawer__list-item-header-icon"
    >
      <svg
        aria-hidden="true"
        class="pf-v6-svg"
        fill="currentColor"
        height="1em"
        role="img"
        viewBox="0 0 32 32"
        width="1em"
      >
        <path
          d="M28.75 22v3.5c0 .689-.561 1.25-1.25 1.25h-7.521c.005.084.021.166.021.25 0 2.206-1.794 4-4 4s-4-1.794-4-4c0-.084.016-.166.021-.25H4.5c-.689 0-1.25-.561-1.25-1.25V22a.75.75 0 0 1 .75-.75c1.24 0 2.25-1.009 2.25-2.25v-4c0-4.826 3.528-8.833 8.138-9.605A2.482 2.482 0 0 1 13.5 3.5C13.5 2.122 14.621 1 16 1s2.5 1.122 2.5 2.5c0 .761-.349 1.436-.888 1.895 4.61.772 8.138 4.779 8.138 9.605v4c0 1.241 1.01 2.25 2.25 2.25a.75.75 0 0 1 .75.75Z"
        />
      </svg>
    </span>
    <h3
      class="pf-v6-c-notification-drawer__list-item-header-title"
    >
      Pod quit unexpectedly
    </h3>
  </div>
</DocumentFragment>
`;
